--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -4,7 +4,7 @@
     margin: 0;
     margin-top: 10rem;
     padding: 0;
-    overflow-y: auto;
+    overflow-y: visible;
     overflow-x: hidden;
     scrollbar-width: none;
   }
